--- a/ggp.cabal
+++ b/ggp.cabal
@@ -13,13 +13,24 @@ cabal-version:       >=1.8
 library
   exposed-modules:     GGP.Player
                        GGP.Protocol
+                       Language.GDL
+                       Language.GDL.Parser
+                       Language.GDL.Print
+                       Language.GDL.Query
+                       Language.GDL.Quote
+                       Language.GDL.Syntax
+                       Language.GDL.Unify
   -- other-modules:
   build-depends:       base                     >= 4.3        && < 5,
+                       antiquoter               >= 0.1.1.0    && < 0.2,
                        bytestring               >= 0.10.0.2   && < 0.11,
                        case-insensitive         >= 1.1        && < 1.2,
+                       containers               >= 0.5.0.0    && < 0.6,
                        http-types               >= 0.8.1      && < 0.9,
+                       parsec                   >= 3.1.3      && < 3.2,
                        resourcet                >= 0.4.8      && < 0.5,
                        sexp                     >= 0.7        && < 0.8,
+                       template-haskell         >= 2.8        && < 2.9,
                        wai                      >= 1.4.0.2    && < 1.5,
                        wai-util                 >= 0.6        && < 0.7
 
