--- a/ggp.cabal
+++ b/ggp.cabal
@@ -13,6 +13,7 @@ cabal-version:       >=1.8
 library
   exposed-modules:     GGP.Player
                        GGP.Protocol
+                       GGP.Utils
                        Language.GDL
                        Language.GDL.Parser
                        Language.GDL.Print
@@ -28,6 +29,7 @@ library
                        containers               >= 0.5.0.0    && < 0.6,
                        http-types               >= 0.8.1      && < 0.9,
                        parsec                   >= 3.1.3      && < 3.2,
+                       pretty                   >= 1.1.1.0    && < 1.2,
                        resourcet                >= 0.4.8      && < 0.5,
                        sexp                     >= 0.7        && < 0.8,
                        template-haskell         >= 2.8        && < 2.9,
