--- a/ggp.cabal
+++ b/ggp.cabal
@@ -27,15 +27,17 @@ library
                        bytestring               >= 0.10.0.2   && < 0.11,
                        case-insensitive         >= 1.1        && < 1.2,
                        containers               >= 0.5.0.0    && < 0.6,
+                       data-default             >= 0.5.3      && < 0.6,
                        http-types               >= 0.8.1      && < 0.9,
                        parsec                   >= 3.1.3      && < 3.2,
                        pretty                   >= 1.1.1.0    && < 1.2,
                        resourcet                >= 0.4.8      && < 0.5,
                        sexp                     >= 0.7        && < 0.8,
                        template-haskell         >= 2.8        && < 2.9,
+                       transformers             >= 0.3        && < 0.4,
                        wai                      >= 1.4.0.2    && < 1.5,
-                       wai-util                 >= 0.6        && < 0.7
-
+                       wai-util                 >= 0.6        && < 0.7,
+                       warp                     >= 1.3.9.2    && < 1.4
 
 executable manual-player
   build-depends:       ggp,
@@ -52,3 +54,11 @@ executable manual-player
                        warp                     >= 1.3.9.2    && < 1.4
   hs-source-dirs:      players
   main-is:             manual-player.hs
+
+executable legal-player
+  build-depends:       ggp,
+                       base                     >= 4.3        && < 5,
+                       data-default             >= 0.5.3      && < 0.6,
+                       transformers             >= 0.3        && < 0.4
+  hs-source-dirs:      players
+  main-is:             legal-player.hs
