--- a/ggp.cabal
+++ b/ggp.cabal
@@ -30,8 +30,10 @@ library
                        containers               >= 0.5.0.0    && < 0.6,
                        data-default             >= 0.5.3      && < 0.6,
                        http-types               >= 0.8.1      && < 0.9,
+                       MonadRandom              >= 0.1.12     && < 0.2,
                        parsec                   >= 3.1.3      && < 3.2,
                        pretty                   >= 1.1.1.0    && < 1.2,
+                       random                   >= 1.0.1.1    && < 1.1,
                        resourcet                >= 0.4.8      && < 0.5,
                        sexp                     >= 0.7        && < 0.8,
                        template-haskell         >= 2.8        && < 2.9,
@@ -63,3 +65,11 @@ executable legal-player
                        transformers             >= 0.3        && < 0.4
   hs-source-dirs:      players
   main-is:             legal-player.hs
+
+executable random-player
+  build-depends:       ggp,
+                       base                     >= 4.3        && < 5,
+                       data-default             >= 0.5.3      && < 0.6,
+                       transformers             >= 0.3        && < 0.4
+  hs-source-dirs:      players
+  main-is:             random-player.hs
