--- a/ggp.cabal
+++ b/ggp.cabal
@@ -41,6 +41,7 @@ library
                        wai                      >= 1.4.0.2    && < 1.5,
                        wai-util                 >= 0.6        && < 0.7,
                        warp                     >= 1.3.9.2    && < 1.4
+  ghc-options:        -Wall -fwarn-tabs
 
 executable manual-player
   build-depends:       ggp,
@@ -57,6 +58,7 @@ executable manual-player
                        warp                     >= 1.3.9.2    && < 1.4
   hs-source-dirs:      players
   main-is:             manual-player.hs
+  ghc-options:         -Wall -fwarn-tabs
 
 executable legal-player
   build-depends:       ggp,
@@ -65,6 +67,7 @@ executable legal-player
                        transformers             >= 0.3        && < 0.4
   hs-source-dirs:      players
   main-is:             legal-player.hs
+  ghc-options:         -Wall -fwarn-tabs
 
 executable random-player
   build-depends:       ggp,
@@ -73,3 +76,13 @@ executable random-player
                        transformers             >= 0.3        && < 0.4
   hs-source-dirs:      players
   main-is:             random-player.hs
+  ghc-options:         -Wall -fwarn-tabs
+
+executable deliberation-player
+  build-depends:       ggp,
+                       base                     >= 4.3        && < 5,
+                       data-default             >= 0.5.3      && < 0.6,
+                       transformers             >= 0.3        && < 0.4
+  hs-source-dirs:      players
+  main-is:             deliberation-player.hs
+  ghc-options:         -Wall -fwarn-tabs
