--- a/ggp.cabal
+++ b/ggp.cabal
@@ -91,8 +91,16 @@ executable minimax-player
   build-depends:       ggp,
                        base                     >= 4.3        && < 5,
                        data-default             >= 0.5.3      && < 0.6,
-                       monad-memo               >= 0.4.1      && < 0.5,
                        transformers             >= 0.3        && < 0.4
   hs-source-dirs:      players
   main-is:             minimax-player.hs
+  ghc-options:         -Wall -fwarn-tabs
+
+executable alpha-beta-player
+  build-depends:       ggp,
+                       base                     >= 4.3        && < 5,
+                       data-default             >= 0.5.3      && < 0.6,
+                       transformers             >= 0.3        && < 0.4
+  hs-source-dirs:      players
+  main-is:             alpha-beta-player.hs
   ghc-options:         -Wall -fwarn-tabs
