Depth-limited minimax player; specials for single-player games

--- a/ggp.cabal
+++ b/ggp.cabal
@@ -73,4 +73,5 @@ executable player
                        Deliberation
                        Minimax
                        AlphaBeta
+                       DepthLimitedMinimax
   ghc-options:         -Wall -fwarn-tabs
