--- a/ggp.cabal
+++ b/ggp.cabal
@@ -41,7 +41,7 @@ library
                        wai                      >= 1.4.0.2    && < 1.5,
                        wai-util                 >= 0.6        && < 0.7,
                        warp                     >= 1.3.9.2    && < 1.4
-  ghc-options:        -Wall -fwarn-tabs
+  ghc-options:        -Wall -fwarn-tabs -O2
 
 executable manual-player
   build-depends:       ggp,
