Untested implementation of MCTS player

--- a/ggp.cabal
+++ b/ggp.cabal
@@ -81,6 +81,7 @@ executable player
                        MobilityAlphaBeta
                        GoalAlphaBeta
                        MonteCarlo
+                       MonteCarloTreeSearch
   ghc-options:         -Wall -fwarn-tabs -O2
 
 test-suite profiling-1
